@@ -28,4 +28,9 @@ WriteMakefile(
         : ()
     ),
 
+    ($mm_ver >= 6.31
+        ? (LICENSE => 'gpl')
+        : ()
+    ),
+
 );
